# search-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
search_lab/embed/: __main__.py  models.py  store.py
search_lab/eval/: __main__.py  debug_eval.py  find_span.py  golden.py  golden_set.json  metrics.py  plot.py  runner.py
search_lab/ingest/: __main__.py  chunkers.py  errors.py  loader.py  models.py
search_lab/rerank/: base.py  cohere_reranker.py  local.py
search_lab/search/: __main__.py  index_opensearch.py  models.py  modes.py  retrieve.py  retriever.py
