[project]
name = "search-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "cohere>=7.0.3",
    "langchain-text-splitters>=1.1.2",
    "opensearch-py>=3.2.0",
    "pydantic>=2.13.4",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.16",
    "sentence-transformers>=5.5.1",
    "structlog>=26.1.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search_lab"]
